<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.upload.UpStoryActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/smLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/previewImageView"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="parent"
            />

        <ImageView
            android:id="@+id/previewImageView"
            android:layout_width="0dp"
            android:layout_height="400dp"
            android:backgroundTint="@color/orange"
            android:contentDescription="@string/preview_image"
            app:layout_constraintBottom_toTopOf="@+id/btnCamera"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/smLocation"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.96"
            app:srcCompat="@drawable/image" />

        <Button
            android:id="@+id/btnGallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gallery"
            app:layout_constraintBottom_toBottomOf="@+id/previewImageView"
            app:layout_constraintBottom_toTopOf="@+id/edLayoutDescription"
            app:layout_constraintEnd_toEndOf="parent"
            android:backgroundTint="@color/orange"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/btnCamera" />

        <Button
            android:id="@+id/btnCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/orange"
            android:text="@string/camera"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/previewImageView"
            app:layout_constraintEnd_toStartOf="@+id/btnGallery"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/edLayoutDescription"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edLayoutDescription"
            android:layout_width="match_parent"
            android:layout_height="200dp"
           android:layout_margin="8dp"
            app:boxBackgroundColor="@color/orange"
            app:layout_constraintBottom_toTopOf="@id/uploadButton"
            app:layout_constraintCircleRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edDescription"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top|start"
                android:hint="@string/description"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/uploadButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="10dp"
            android:text="@string/upload"
            app:layout_constraintBottom_toBottomOf="@id/edLayoutDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:backgroundTint="@color/purple"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>