<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.home.HomeActivity">

    <ImageView
        android:id="@+id/ivHome"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/guidelineHorizontal2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontal1"
        app:srcCompat="@drawable/image_welcome"
        android:contentDescription="@string/welcome"/>

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:alpha="0"
        android:text="@string/welcome"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guidelineHorizontal2"
        tools:alpha="100"
        android:gravity="center"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:alpha="0"
        android:text="@string/login"
        app:layout_constraintEnd_toStartOf="@id/guidelineVertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvWelcome"
        tools:alpha="100"
        android:backgroundTint="@color/purple"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:alpha="0"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guidelineVertical"
        app:layout_constraintTop_toBottomOf="@id/tvWelcome"
        tools:alpha="100"
        android:backgroundTint="@color/purple"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.2"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVertical"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>